--- a/style.css
+++ b/style.css
@@ -8,39 +8,61 @@ body {
 
 main {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr) ;
-    width: 1200px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: 35% 30% 35%;
+    width: 1300px;
     height: 900px;
 }
 
 .toptext-section {
     background-color: red ;
     
-    grid-column: 2 / 4;
+    grid-column: 4 / 9;
     grid-row: 1 / 2;
 }
 
 .form-section {
     background-color: blue ;
-    grid-column: 2 / 4;
+    grid-column: 4 / 9;
     grid-row: 2 / 3;
 }
 
 .create-account-section {
     background-color: green ;
-    grid-column: 2 / 4;
+    grid-column: 4 / 9;
     grid-row: 3 / 4;
 }
 
 .image-section {
-    background-color: indigo ;
-    grid-column: 1 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("img/leaf3.jpg");
+    grid-column: 1 / 4;
     grid-row: 1 / 4;
 }
 
 .image-overlay {
-    background-color: brown ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 150px;
+    background-color: black;
+    opacity: 40%;
+   
 }
 
 
+.logo-overlay {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+   
+}
+
+.img {
+    width: 330px;
+    height: 330px;
+}
