--- a/style.css
+++ b/style.css
@@ -10,27 +10,94 @@ main {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 35% 30% 35%;
-    width: 1300px;
-    height: 900px;
+    max-width: 1300px;
+    min-height: 900px;
 }
 
 .toptext-section {
-    background-color: red ;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 2rem;
+    background-color: #F7F9FA ;
     
     grid-column: 4 / 9;
     grid-row: 1 / 2;
 }
 
 .form-section {
-    background-color: blue ;
+    display: grid; 
+    grid-template-columns: 1; 
+    grid-template-rows: repeat(3, 1fr);
+
+    background-color: white ;
     grid-column: 4 / 9;
     grid-row: 2 / 3;
+    
+
 }
 
+form {
+    padding: 50px;
+}
+
+.first-row {
+   display: flex;
+  
+    grid-column: 1 /2;
+    grid-row: 1 / 2;
+  
+
+    
+}
+
+.second-row {
+    display: flex;
+    
+    
+    grid-column: 1 / 2; 
+    grid-row: 2 / 3;
+   
+}
+
+.third-row {
+    display: flex;
+  
+    grid-column: 1 / 2; 
+    grid-row: 3 / 4;
+  
+
+    
+}
+
+
+
+
+/* form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+} */
+
+
+
 .create-account-section {
-    background-color: green ;
+    padding: 2rem;
+    background-color:#F7F9FA ;
     grid-column: 4 / 9;
     grid-row: 3 / 4;
+}
+
+button {
+    background-color: #485B39;
+    border-radius: 7px;
+    width: 12rem;
+    height: 3rem;
+    color: white;
+    font-size: 1rem;
+    font-weight: 800;
+    
 }
 
 .image-section {
