--- a/style.css
+++ b/style.css
@@ -38,12 +38,13 @@ main {
 }
 
 form {
-    padding: 50px;
+    padding: 2rem;
 }
 
 .first-row {
-   display: flex;
-  
+   
+    display: flex;
+    gap: 3rem;
     grid-column: 1 /2;
     grid-row: 1 / 2;
   
@@ -53,7 +54,7 @@ form {
 
 .second-row {
     display: flex;
-    
+   gap: 3rem;
     
     grid-column: 1 / 2; 
     grid-row: 2 / 3;
@@ -62,6 +63,7 @@ form {
 
 .third-row {
     display: flex;
+    gap: 3rem;
   
     grid-column: 1 / 2; 
     grid-row: 3 / 4;
@@ -69,6 +71,7 @@ form {
 
     
 }
+
 
 
 
@@ -81,6 +84,9 @@ form {
 } */
 
 
+input {
+    width: 13rem;
+}
 
 .create-account-section {
     padding: 2rem;
